--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -16,9 +16,9 @@ jobs:
           java-version: '11'
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --file karaf-system/pom.xml -Pecs-build -Dmaven.test.skip=true -Dpostgres.ecs.password=$postgres.ecs.password
+        run: mvn clean install --file karaf-system/pom.xml -Pecs-build -Dmaven.test.skip=true -Dpostgres.ecs.password=$postgres-ecs-password
         env:
-          postgres.ecs.password: ${{secrets.PAT_LEGO_DB_PWD}} 
+          postgres-ecs-password: ${{secrets.PAT_LEGO_DB_PWD}} 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
