--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - feature/*
+  schedule:
+    - cron: '0 * * * *'
 jobs: 
   build_and_test:
     name: Java Build and Test
