--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -23,9 +23,9 @@ jobs:
           java-version: '11'
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --file karaf-system/pom.xml -Dmaven.test.skip=true -Pecs-build
+        run: mvn clean install --file karaf-system/pom.xml -Dpostgres.ecs.password=$KARAF_DB_PWD -Dmaven.test.skip=true -Pecs-build
         env:
-          postgres-ecs-password: ${{secrets.PAT_LEGO_DB_PWD}} 
+          KARAF_DB_PWD: ${{secrets.PAT_LEGO_DB_PWD}} 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
