--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run Maven
         run: mvn clean install --file karaf-system/pom.xml -Dpostgres.ecs.password=$KARAF_DB_PWD -Dmaven.test.skip=true -Pecs-build
         env:
-          KARAF_DB_PWD: ${{secrets.PAT_LEGO_DB_PWD}} 
+          KARAF_DB_PWD: ${{secrets.KARAF_DB_PWD}} 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
