--- a/.github/workflows/build-and-test-daily.yml
+++ b/.github/workflows/build-and-test-daily.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - master
   schedule:
-    - cron: '* * * * *'
+    # Runs every day at 6 AM
+    - cron: '0 6 * * *'
 jobs: 
   build_and_test:
     name: Scheduled Java Build and Test
