Adding the contact page resource

--- a/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
+++ b/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
      build:
       context: ./
       dockerfile: Karaf.Dockerfile
-     image: 525939336058.dkr.ecr.ca-central-1.amazonaws.com/pat-lego.vm.dev:karaf-vm
+     image: pat-lego.vm.dev:karaf-vm
      restart: always
      ports:
          - "5005:5005"
@@ -27,7 +27,7 @@ services:
      build:
       context: ./
       dockerfile: Postgres.Dockerfile
-     image: 525939336058.dkr.ecr.ca-central-1.amazonaws.com/pat-lego.vm.dev:karaf-db
+     image: pat-lego.vm.dev:karaf-db
      restart: always
      ports:
          - "5432:5432"
