Adding coveralls action

--- a/.github/workflows/build-and-test-daily.yml
+++ b/.github/workflows/build-and-test-daily.yml
@@ -1,5 +1,4 @@
-name: Build and Test
-
+name: Scheduled Build and Test
 on: 
   schedule:
     # Runs every day at 6 AM
@@ -23,4 +22,7 @@ jobs:
           java-version: '11'
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --file karaf-system/pom.xml -Pdev-build
+        run: mvn clean install --file karaf-system/pom.xml -Pdev-build coveralls:report
+        env:
+          COVERALLS_TOKEN: ${{secrets.COVERALLS_TOKEN}}
+
