--- a/karaf-system/system.profile/pom.xml
+++ b/karaf-system/system.profile/pom.xml
@@ -79,6 +79,15 @@
             </configuration>
           </execution>
           <execution>
+            <id>npm test</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run test:unit</arguments>
+            </configuration>
+          </execution>
+          <execution>
             <id>npm build</id>
             <goals>
               <goal>npm</goal>
