--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -14,6 +14,7 @@
     <module>system.profile</module>
     <module>system.features</module>
     <module>system.core</module>
+    <module>system.graphql</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,8 +34,7 @@
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
           <version>4.3.0</version>
-          <dependencies>
-            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+          <dependencies> <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
             <dependency>
               <groupId>javax.xml.bind</groupId>
               <artifactId>jaxb-api</artifactId>
@@ -110,8 +110,7 @@
             <goals>
               <goal>prepare-agent</goal>
             </goals>
-          </execution>
-          <!-- attached to Maven test phase -->
+          </execution> <!-- attached to Maven test phase -->
           <execution>
             <id>report</id>
             <phase>test</phase>
@@ -224,15 +223,13 @@
         <artifactId>mockito-junit-jupiter</artifactId>
         <version>3.4.4</version>
         <scope>test</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>3.4.4</version>
         <scope>test</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-inline</artifactId>
@@ -308,26 +305,22 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.9</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+      </dependency> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.7</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
       <dependency>
         <groupId>org.apache.pdfbox</groupId>
         <artifactId>pdfbox</artifactId>
         <version>2.0.20</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
       <dependency>
         <groupId>org.apache.pdfbox</groupId>
         <artifactId>fontbox</artifactId>
         <version>2.0.20</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
       <dependency>
         <groupId>org.apache.tika</groupId>
         <artifactId>tika-core</artifactId>
@@ -337,20 +330,17 @@
         <groupId>org.apache.pdfbox</groupId>
         <artifactId>pdfbox-tools</artifactId>
         <version>2.0.20</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
       <dependency>
         <groupId>org.apache.tika</groupId>
         <artifactId>tika-parsers</artifactId>
         <version>1.24.1</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+      </dependency> <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
         <version>5.4.2.Final</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+      </dependency> <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
       <dependency>
         <groupId>javax.persistence</groupId>
         <artifactId>javax.persistence-api</artifactId>
@@ -358,4 +348,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-</project>
+</project> 
