Adding graphql interfaces

--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -346,6 +346,11 @@
         <artifactId>javax.persistence-api</artifactId>
         <version>2.2</version>
       </dependency>
+      <dependency>
+        <groupId>com.graphql-java</groupId>
+        <artifactId>graphql-java</artifactId>
+        <version>14.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project> 
