--- a/karaf-system/system.graphql/pom.xml
+++ b/karaf-system/system.graphql/pom.xml
@@ -105,5 +105,9 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
