--- a/karaf-system/system.dao/pom.xml
+++ b/karaf-system/system.dao/pom.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.github.vm.patlego</groupId>
     <artifactId>karaf-system</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>io.github.vm.patlego</groupId>
@@ -43,8 +46,7 @@
           <instructions>
             <Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>
             <Import-Package>
-              !javax.annotation, 
-              javax.persistence;version="[2,3)",
+              !javax.annotation, javax.persistence;version="[2,3)",
               *</Import-Package>
             <!-- Enable processing of OSGI DS component annotations -->
             <_dsannotations>*</_dsannotations>
