--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pat-lego/io.github.vm.patlego#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "commander": "^6.1.0",
     "shelljs": "^0.8.4"
   }
