--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,12 +1,42 @@
 name: Build and Test
-on: 
+on:
   push:
     branches:
       - feature/*
   pull_request:
     branches:
       - feature/*
-jobs: 
+jobs:
+  migrate_db:
+    name: Migrate DB
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    steps:
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - uses: actions/checkout@v2
+      - name: Setup Java 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: "11"
+          architecture: x64
+      - name: Run Maven
+        run: mvn clean install --projects system.sql --file karaf-system/pom.xml -Dpostgres.ecs.password=$KARAF_DB_PWD -Dmaven.test.skip=true -Pecs-build
+        env:
+          KARAF_DB_PWD: ${{secrets.KARAF_DB_PWD}}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.LAMBDA_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.LAMBDA_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Deploy DB Lambda Function
+        run: aws lambda update-function-code --function-name karaf-vm-db-deployment --zip-file fileb://karaf-system/system.sql/target/system.sql.zip
   build_and_test:
     name: Java Build and Test
     runs-on: ubuntu-latest
@@ -22,7 +52,7 @@ jobs:
       - name: Setup Java 11
         uses: actions/setup-java@v1
         with:
-          java-version: '11'
+          java-version: "11"
           architecture: x64
       - name: Run Maven
         run: mvn clean install --file karaf-system/pom.xml -Pdev-build
