--- a/karaf-system/system.sql/pom.xml
+++ b/karaf-system/system.sql/pom.xml
@@ -154,6 +154,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
+              <finalName>system.sql</finalName>
+              <appendAssemblyId>false</appendAssemblyId>
               <descriptors>
                 <descriptor>src/main/assembly/zip.xml</descriptor>
               </descriptors>
