--- a/.github/workflows/manual-build-and-test.yml
+++ b/.github/workflows/manual-build-and-test.yml
@@ -1,14 +1,13 @@
-name: Build and Test
+name: Manual Build and Test
 on:
-  push:
-    branches:
-      - feature/*
-  pull_request:
-    branches:
-      - feature/*
+  workflow_dispatch:
+    inputs:
+      git-ref:
+        description: Git Ref (Optional)
+        required: false
 jobs:
   build_and_test:
-    name: Java Build and Test
+    name: Manual Java Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: Cache local Maven repository
@@ -18,7 +17,14 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - uses: actions/checkout@v2
+      - name: Clone Repository (Latest)
+        uses: actions/checkout@v2
+        if: github.event.inputs.git-ref == ''
+      - name: Clone Repository (Custom Ref)
+        uses: actions/checkout@v2
+        if: github.event.inputs.git-ref != ''
+        with:
+          ref: ${{ github.event.inputs.git-ref }}
       - name: Setup Java 11
         uses: actions/setup-java@v1
         with:
