--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -13,7 +13,6 @@
     <module>system.workflow</module>
     <module>system.graphql</module>
     <module>system.ocr</module>
-    <module>system.profile</module>
     <module>system.features</module>
     <module>system.core</module>
   </modules>
@@ -36,6 +35,14 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <karaf.runtime.version>4.3.0.RC1</karaf.runtime.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>patlego-website</id>
+      <url>https://maven.pkg.github.com/pat-lego/io.github.vm.patlego.website</url>
+    </repository>
+  </repositories>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -400,6 +407,11 @@
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-core</artifactId>
         <version>4.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.vm.patlego</groupId>
+        <artifactId>website</artifactId>
+        <version>1.0-SNAPSHOT</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
