--- a/.github/workflows/manual-build-and-test.yml
+++ b/.github/workflows/manual-build-and-test.yml
@@ -31,4 +31,4 @@ jobs:
           java-version: "11"
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --file karaf-system/pom.xml -Pdev-build
+        run: mvn --settings settings.xml clean install --file karaf-system/pom.xml -Pdev-build
