--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -56,7 +56,7 @@ jobs:
           java-version: "11"
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --settings settings.xml --file karaf-system/pom.xml -Dpackages.website.token=$PACKAGES_WEBSITE_TOKEN -Dpostgres.ecs.password=$KARAF_DB_PWD -Dmaven.test.skip=true -Pecs-build
+        run: mvn --settings settings.xml clean install --file karaf-system/pom.xml -Dpostgres.ecs.password=$KARAF_DB_PWD -Dmaven.test.skip=true -Pecs-build
         env:
           KARAF_DB_PWD: ${{secrets.KARAF_DB_PWD}}
       - name: Configure AWS Credentials
