--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -70,6 +70,8 @@
             <feature>http</feature>
             <feature>http-whiteboard</feature>
 
+            <feature>war</feature>
+
             <feature>transaction</feature>
             <feature>jndi</feature>
             <feature>jdbc</feature>
